# RayleighChebyshevSamples

./: .gitignore  .gitmodules  LaplaceOp2dEigTest.cpp  README.md
DiagOpEigTest/: ArandomizeOpClass.h  AvectorClass.h  CMakeLists.txt  DiagOpClass.h  DiagOpEigTest.cpp
LaplaceOp2dEigTest_FD/: CMakeLists.txt  LaplaceOp2d.h  LaplaceOp2dEigTest_FD.cpp
LaplaceOp2dEigTest_SparseMatrix/: CMakeLists.txt  LaplaceOp2dEigTest_SparseMatrix.cpp
